fix: 修复滚动时表格头未遮盖部分元素问题 | Fix the issue of the table header not covering the part of the element when scrolling.

--- a/style/module/custom-render-scroll.css
+++ b/style/module/custom-render-scroll.css
@@ -31,4 +31,5 @@
     position: sticky;
     top: 1px;
     outline: 1px solid var(--b3-theme-primary);
+    z-index: 1;
 }
